fix: z-index on tooltip

--- a/src/assets/css/quill-table-better.scss
+++ b/src/assets/css/quill-table-better.scss
@@ -27,7 +27,7 @@ $focused-border: 1px solid $focused-border-color;
   background: $color;
   border-radius: 6px;
   position: absolute;
-  z-index: 1;
+  z-index: 11;
   left: 50%;
   bottom: -10px;
   transform: translate(-50%, 100%);
@@ -264,6 +264,7 @@ $focused-border: 1px solid $focused-border-color;
   &-error {
     @include qlTableTooltip($tooltip-color-error);
     white-space: pre-wrap;
+    z-index: 9;
   }
 }
 .ql-table-dropdown-properties {
